--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,7 @@
-/*
-    COLORES DARK MODE:
-
-    --first-color: hsl(182, 53%, 74%);
-    --button-color: hsl(246, 16%, 12%);
-    --button-color-alt: hsl(0, 0%, 28%);
-    --card-color: hsla(246, 16%, 5%, .5);
-    --title-color: hsl(0, 0%, 95%);
-    --text-color: hsl(0, 0%, 75%);
-    --body-color: hsl(249, 19%, 14%);
-    --container-color: hsl(246, 16%, 12%);
-    --border-color: hsl(0, 0%, 20%);
-*/
 
 /*--------configuraciones generales--------*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
-    root {      
+ :root{
     --first-color: hsl(354, 78%, 60%);
     --button-color: hsl(0, 0%, 17%);
     --button-color-alt: hsl(0, 0%, 21%);
@@ -26,24 +13,120 @@
     --container-color: #fff;
     --border-color: hsl(0, 0%, 94%);
   }
-
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
 }
-
 html{
 font-family: 'Roboto', sans-serif;
 --body-color: hsl(206, 4%, 97%);
-
 }
 
-
-nav{
+/*------encabezado  y barra de navegacion--------*/
+.containerNav{
     display: flex;
-    align-items: flex-end;
 }
+.flotante1{
+    display: flex;
+    justify-content: flex-start;
+    width: 50%;
+    padding: .5rem;
+}
+.logo-academlo>img{
+    height: 35px;
+    width: 35px;
+}
+.nav-btns{
+    display: flex;
+    justify-content: flex-end;
+    padding: .5rem;
+    margin: .5rem;
+    width: 48%;
+    gap: 10px;
+}
+/*---------------------------------------*/
+/*--contenedor cuadro rojo--*/
+.home-img{
+    width: 400px;
+    height: 381px;
+  }
+/*------------------------------------*/
+/*------cuadro rojo---------------*/
+.home-img-bg{
+    background-color:var(--first-color);
+    width: 60%;
+    max-width: 350px;
+    position: absolute;
+    right: 0;
+    top: -4.5rem;
+    height: 429px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.home-img img{
+    width: 270px;
+    height: 270px;
+    object-fit: contain;
+}
+/*-----------------------------------------------*/
+/*--------posicionamiento cuadro rojo---------*/
+.prueba{
+    position: relative;
+}
+.p1{
+    z-index: 2;
+}
+.p2{
+    z-index: 1;
+}
+/*-----------------------------------------------*/
+/*-----------titulo-------------*/
+.title{
+    display:flex;
+    justify-content: center;
+    margin: 5%;
+    color:  hsl(0, 0%, 15%);
+    font-size: 25px;
+    text-align: start;
+}
+/*-----------------------------------------------*/
+/*-----parrafo descripcion titulo---*/
+.parrafo1{
+    display: flex;
+    justify-content: center;
+    margin: 5%;
+    font-size: 15px;
+    text-align: justify;
+}
+/*-----------------------------------------------*/
+/*-----tamaño y color texto precio titulo----*/
+.price{
+   margin: 5%;
+   font-size: 20px;
+}
+.priceText{
+    color: hsl(354, 78%, 60%);
+}
+/*-----------------------------------------------*/
+/*------botones discover y add to cart-----*/
+
+.discoverBox{
+    margin: 5%;
+    background-color:grey;
+    display:inline-flex;
+    padding: 15px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.discoverText{
+    color: black
+}
+/*--------------------*/
+/*----botones productos----*/
 
 
 
@@ -86,7 +169,7 @@ nav{
 }
 
 .empty-state > img{
-  max-width: 250px;
+    max-width: 250px;
 }
 
 
@@ -103,64 +186,7 @@ nav{
 
 
 
-.imgPpal{
-    background-color: hsl(354, 78%, 60%);
-    display: flex;
-    justify-content: center;
-    height: 330px;
-    width: 180px;
-    margin-left: auto;
 
-    
-}
-
-.boxPpal{
-    height: 60%;
-    width: 200px;
-    display: inline-flex;
-    margin-top: 130px;
-}
-
-.title{
-    display:flex;
-    justify-content: center;
-    margin: 5%;
-    color:  hsl(0, 0%, 15%);
-}
-
-.parrafo1{
-    display: flex;
-    justify-content: center;
-    margin: 5%;
-    font-size: 15px;
-}
-
-.price{
-   margin: 5%;
-}
-
-.priceText{
-    color: hsl(354, 78%, 60%);
-}
-
-
-.botones{
-display: flex;
-}
-
-.discoverBox{
-    margin: 5%;
-    background-color:grey;
-    display:inline-flex;
-    padding: 15px;
-    padding-right: 25px;
-    padding-left:25px;
-    
-}
-
-.discoverText{
-    color: black
-}
 
 .addCart{
     margin: 5%;
@@ -258,37 +284,60 @@ margin: 5%;
 }
 
 
+/*--------------------------footer-----------*/
+
 footer{
-  background-color: grey;
-  padding: 80px 30px;
   display: flex;
-  flex-direction: column;
+  background-color: grey;
+  padding: 20px 30px;
+  flex-direction: column; 
   text-align: center;
+  flex-direction: row;
+  justify-content: center;
+  gap: 6px;
+  font-size: 15px;
+ 
 }
+
+footer{
+    padding: 15px;
+}
+
 
 footer>div>ul{
   list-style: none;
   padding: 10px 0;
 }
 
-footer>div{
-  padding: 15px;}
-
-
 footer>div>ul>li{
-  padding: 8px;
+  padding: 5px;
+  text-align: start;
+}
+
+.footocial{
+    display: flex;
+    flex-direction: column;
+}
+
+.footInfo,
+.footAbout,
+.footProduct > ul>li{
+     font-size: 15px;
 }
 
 
+
 /* ------------------media-queries-------------------*/
+
 @media screen and ( min-width:600px ) {
-  
+/*   
   footer{
     flex-direction: row;
     justify-content: center;
     gap: 50px;
     padding: 100px 30px;
-}
+} */
+
 }
 
 @media screen and (min-width: 768px) { 
